@@ -1,5 +1,10 @@
 2008-06-10  David Gilbert  <david.gilbert@object-refinery.com>
 
+    * source/org/jfree/data/time/Millisecond.java
+    (compareTo): Added handling for general RegularTimePeriod.
+    
+2008-06-10  David Gilbert  <david.gilbert@object-refinery.com>
+
     * source/org/jfree/data/time/TimePeriodValue.java
     (toString): New method override,
     * source/org/jfree/data/time/TimePeriodValues.java
